feat: mailgun integration - send password via email

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
   "require": {
-      "dmkit/phalcon-jwt-auth": "^1.0"
+    "dmkit/phalcon-jwt-auth": "^1.0",
+    "mailgun/mailgun-php": "^2.8",
+    "kriswallsmith/buzz": "^1.0",
+    "nyholm/psr7": "^1.1"
   }
 }
