feat: improved export to excel

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "dmkit/phalcon-jwt-auth": "^1.0",
     "mailgun/mailgun-php": "^2.8",
     "kriswallsmith/buzz": "^1.0",
-    "nyholm/psr7": "^1.1"
+    "nyholm/psr7": "^1.1",
+    "phpoffice/phpspreadsheet": "^1.6"
   }
 }
